# poo2021

./: CMakeLists.txt  Canvas.h  Masina.cpp  Masina.h  Math.h  NumberList.cpp  Sort.cpp  Sort.h  Student.cpp  Student.h  main.cpp
lab10/: Array.cpp  Array.h  main.cpp
lab12/: Agenda.cpp  Agenda.h  Coleg.cpp  Coleg.h  Contact.h  Cunoscut.cpp  Cunoscut.h  Prieten.cpp  Prieten.h  main.cpp
lab2/: NumberList.h
lab3/: Canvas.cpp  Math.cpp
lab4/: Sort.cpp
lab5/: Number.cpp  Number.h  main.cpp
lab6/: Car.h  Circuit.cpp  Circuit.h  Dacia.cpp  Dacia.h  Ford.cpp  Ford.h  Mazda.cpp  Mazda.h  Mercedes.cpp  Mercedes.h  Toyota.cpp  Toyota.h  Weather.h  main.cpp
lab7/: Vector.cpp  Vector.hpp
lab8/: lab8.cpp  lab8.h
lab9remake/: Map.h  main.cpp
lambda/: lambda.cpp
side/: List.cpp  List.h  main.cpp
