cmake_minimum_required(VERSION 3.17)
project(lab1)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab1 main.cpp
#        lab2/NumberList.cpp lab2/NumberList.h
#        lab2/Student.cpp lab2/Student.h
#        lab3/Canvas.cpp lab3/Canvas.h lab3/Math.cpp lab3/Math.h
#        lab4/Sort.cpp lab4/Sort.h
#        lab5/Number.cpp lab5/Number.h
#        side/List.cpp side/List.h
#        lab6/Circuit.h lab6/Circuit.cpp lab6/Car.h lab6/Dacia.cpp lab6/Dacia.h lab6/Mazda.h lab6/Mazda.cpp lab6/Ford.h lab6/Ford.cpp
#        lab6/Mercedes.h lab6/Mercedes.cpp lab6/Toyota.h lab6/Toyota.cpp lab6/Weather.h

        lab7/Vector.cpp lab7/Vector.hpp)
